@@ -6,7 +6,6 @@ import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.folio.HttpStatus.HTTP_CREATED;
 import static org.folio.HttpStatus.HTTP_UNPROCESSABLE_ENTITY;
 import static org.folio.rest.api.ItemEffectiveCallNumberComponentsTest.ITEM_LEVEL_CALL_NUMBER_TYPE;
-import static org.folio.rest.support.AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY;
 import static org.folio.rest.support.HttpResponseMatchers.errorMessageContains;
 import static org.folio.rest.support.HttpResponseMatchers.errorParametersValueIs;
 import static org.folio.rest.support.HttpResponseMatchers.statusCodeIs;
@@ -59,11 +58,13 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
+import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import junitparams.JUnitParamsRunner;
 import junitparams.Parameters;
+import kotlin.jvm.functions.Function4;
 import lombok.SneakyThrows;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -72,7 +73,6 @@ import org.folio.HttpStatus;
 import org.folio.rest.jaxrs.model.Errors;
 import org.folio.rest.jaxrs.model.Note;
 import org.folio.rest.persist.PostgresClient;
-import org.folio.rest.support.AdditionalHttpStatusCodes;
 import org.folio.rest.support.IndividualResource;
 import org.folio.rest.support.JsonArrayHelper;
 import org.folio.rest.support.JsonErrorResponse;
@@ -86,6 +86,7 @@ import org.folio.rest.support.messages.ItemEventMessageChecks;
 import org.folio.rest.tools.utils.OptimisticLockingUtil;
 import org.folio.services.consortium.entities.SharingInstance;
 import org.folio.services.consortium.entities.SharingStatus;
+import org.folio.util.PercentCodec;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.Before;
@@ -366,7 +367,7 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
 
     JsonErrorResponse response = createCompleted.get(TIMEOUT, TimeUnit.SECONDS);
 
-    assertThat(response.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(response.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
     assertThat(response.getErrors(), hasSoleMessageContaining("Unrecognized field"));
   }
 
@@ -697,6 +698,54 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
 
     assertThat(secondPageHoldings.size(), is(2));
     assertThat(secondPage.getInteger("totalRecords"), is(5));
+  }
+
+  @Test
+  @SneakyThrows
+  public void canGetByInstanceId() {
+    UUID instanceId = UUID.randomUUID();
+    instancesClient.create(nod(instanceId));
+    Function4<UUID, String, String, String, String> createHolding =
+        (location, prefix, callNumber, suffix) -> createHolding(new HoldingRequestBuilder()
+            .forInstance(instanceId)
+            .withSource(getPreparedHoldingSourceId())
+            .withPermanentLocation(location)
+            .withCallNumberPrefix(prefix)
+            .withCallNumber(callNumber)
+            .withCallNumberSuffix(suffix))
+          .getId().toString();
+    final var h7 = createHolding.invoke(SECOND_FLOOR_LOCATION_ID, "b", "k", "p");
+    final var h6 = createHolding.invoke(MAIN_LIBRARY_LOCATION_ID, "c", "j", "q");
+    final var h5 = createHolding.invoke(MAIN_LIBRARY_LOCATION_ID, "b", "k", "q");
+    final var h4 = createHolding.invoke(MAIN_LIBRARY_LOCATION_ID, "a", "l", "r");
+    final var h3 = createHolding.invoke(MAIN_LIBRARY_LOCATION_ID, "a", "k", "o");
+    final var h2 = createHolding.invoke(MAIN_LIBRARY_LOCATION_ID, "a", "j", "q");
+    final var h1 = createHolding.invoke(MAIN_LIBRARY_LOCATION_ID, "a", "j", "p");
+    final var h0 = createHolding.invoke(ANNEX_LIBRARY_LOCATION_ID, "b", "k", "q");
+    Function<String, List<String>> getHoldingsIds = query -> holdingsClient.getByQuery(query).stream()
+        .map(holding -> holding.getString("id")).toList();
+
+    var query = "instanceId==" + instanceId
+        + " sortBy effectiveLocation.name callNumberPrefix callNumber callNumberSuffix";
+    query = "?query=" + PercentCodec.encode(query);
+    var ids = getHoldingsIds.apply(query);
+    assertThat(ids, is(List.of(h0, h1, h2, h3, h4, h5, h6, h7)));
+
+    ids = getHoldingsIds.apply(query + "&offset=2&limit=4");
+    assertThat(ids, is(List.of(h2, h3, h4, h5)));
+
+    query = "instanceId==" + instanceId + " sortBy callNumberSuffix callNumber callNumberPrefix effectiveLocation.name";
+    query = "?query=" + PercentCodec.encode(query);
+    ids = getHoldingsIds.apply(query);
+    // h3 M a k o
+    // h1 M a j p
+    // h7 S b k p
+    // h2 M a j q
+    // h6 M c j q
+    // h0 A b k q
+    // h5 M b k q
+    // h4 M a l r
+    assertThat(ids, is(List.of(h3, h1, h7, h2, h6, h0, h5, h4)));
   }
 
   @Test
@@ -1059,7 +1108,7 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
 
     UUID holdingId = UUID.randomUUID();
 
-    final JsonObject holding = holdingsClient.create(new HoldingRequestBuilder()
+    final JsonObject holding = createHolding(new HoldingRequestBuilder()
       .withId(holdingId)
       .forInstance(instanceId)
       .withSource(getPreparedHoldingSourceId())
@@ -2324,22 +2373,22 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
 
     final Response duplicateResponse = create(holdingsStorageUrl(""), duplicateHoldings);
 
-    assertThat(duplicateResponse.getStatusCode(), is(UNPROCESSABLE_ENTITY));
+    assertThat(duplicateResponse.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
 
     final Errors errors = duplicateResponse.getJson().mapTo(Errors.class);
 
     assertThat(errors, notNullValue());
     assertThat(errors.getErrors(), notNullValue());
     assertThat(errors.getErrors().size(), is(1));
-    assertThat(errors.getErrors().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getMessage(),
+    assertThat(errors.getErrors().getFirst(), notNullValue());
+    assertThat(errors.getErrors().getFirst().getMessage(),
       containsString("HRID value already exists in table holdings_record: ho00000000001"));
-    assertThat(errors.getErrors().get(0).getParameters(), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().size(), is(1));
-    assertThat(errors.getErrors().get(0).getParameters().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getKey(),
+    assertThat(errors.getErrors().getFirst().getParameters(), notNullValue());
+    assertThat(errors.getErrors().getFirst().getParameters().size(), is(1));
+    assertThat(errors.getErrors().getFirst().getParameters().getFirst(), notNullValue());
+    assertThat(errors.getErrors().getFirst().getParameters().getFirst().getKey(),
       is("lower(f_unaccent(jsonb ->> 'hrid'::text))"));
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getValue(),
+    assertThat(errors.getErrors().getFirst().getParameters().getFirst().getValue(),
       is("ho00000000001"));
 
     log.info("Finished cannotCreateAHoldingsWhenDuplicateHRIDIsSupplied");
@@ -2418,14 +2467,14 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
 
     assertThat(errors, notNullValue());
     assertThat(errors.getErrors(), notNullValue());
-    assertThat(errors.getErrors().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getMessage(),
+    assertThat(errors.getErrors().getFirst(), notNullValue());
+    assertThat(errors.getErrors().getFirst().getMessage(),
       is("HRID value already exists in table holdings_record: ho00000001000"));
-    assertThat(errors.getErrors().get(0).getParameters(), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getKey(),
+    assertThat(errors.getErrors().getFirst().getParameters(), notNullValue());
+    assertThat(errors.getErrors().getFirst().getParameters().getFirst(), notNullValue());
+    assertThat(errors.getErrors().getFirst().getParameters().getFirst().getKey(),
       is("lower(f_unaccent(jsonb ->> 'hrid'::text))"));
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getValue(),
+    assertThat(errors.getErrors().getFirst().getParameters().getFirst().getValue(),
       is("ho00000001000"));
   }
 
@@ -2635,14 +2684,16 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
 
     assertThat(errors, notNullValue());
     assertThat(errors.getErrors(), notNullValue());
-    assertThat(errors.getErrors().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getMessage(),
+    var error = errors.getErrors().getFirst();
+    assertThat(error, notNullValue());
+    assertThat(error.getMessage(),
       is("HRID value already exists in table holdings_record: ho00000000001"));
-    assertThat(errors.getErrors().get(0).getParameters(), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getKey(),
+    assertThat(error.getParameters(), notNullValue());
+    var parameter = error.getParameters().getFirst();
+    assertThat(parameter, notNullValue());
+    assertThat(parameter.getKey(),
       is("lower(f_unaccent(jsonb ->> 'hrid'::text))"));
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getValue(),
+    assertThat(parameter.getValue(),
       is("ho00000000001"));
 
     for (int i = 0; i < holdingsArray.size(); i++) {
@@ -2708,7 +2759,7 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
       .getMany("fullCallNumber == \"%s\"", "prefix callNumber suffix");
 
     assertThat(foundHoldings.size(), is(1));
-    assertThat(foundHoldings.get(0).getId(), is(wholeCallNumberHolding.getId()));
+    assertThat(foundHoldings.getFirst().getId(), is(wholeCallNumberHolding.getId()));
   }
 
   @Test
@@ -2763,11 +2814,11 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
 
     var foundPlanet = holdingsClient.getMany("instance.title = planet");
     assertThat(foundPlanet, hasSize(1));
-    assertThat(foundPlanet.get(0).getId(), is(holdingPlanet));
+    assertThat(foundPlanet.getFirst().getId(), is(holdingPlanet));
 
     var foundUprooted = holdingsClient.getMany("instance.title = uprooted");
     assertThat(foundUprooted, hasSize(1));
-    assertThat(foundUprooted.get(0).getId(), is(holdingUprooted));
+    assertThat(foundUprooted.getFirst().getId(), is(holdingUprooted));
   }
 
   @Test
@@ -2957,7 +3008,7 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
       .getMany("cql.allRecords=1 not discoverySuppress==true");
 
     assertThat(suppressedHoldings.size(), is(1));
-    assertThat(suppressedHoldings.get(0).getId(), is(suppressedHolding.getId()));
+    assertThat(suppressedHoldings.getFirst().getId(), is(suppressedHolding.getId()));
 
     assertThat(notSuppressedHoldings.size(), is(2));
     assertThat(notSuppressedHoldings.stream()
@@ -3362,6 +3413,12 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
       is(both(greaterThanOrEqualTo(minHrid)).and(lessThanOrEqualTo(maxHrid))));
   }
 
+  private IndividualResource createHolding(HoldingRequestBuilder holding) {
+    return holdingsClient.create(holding.create(),
+        TENANT_ID,
+        Map.of(X_OKAPI_URL, mockServer.baseUrl()));
+  }
+
   private Response create(URL url, Object entity) throws InterruptedException, ExecutionException, TimeoutException {
     CompletableFuture<Response> createCompleted = new CompletableFuture<>();
 
@@ -3411,7 +3468,7 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
   private List<String> getTags(JsonObject json) {
     return json.getJsonObject("tags").getJsonArray("tagList")
       .stream()
-      .map(obj -> (String) obj)
+      .map(String.class::cast)
       .toList();
   }
 
@@ -3452,6 +3509,7 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
       return NAME;
     }
 
+    @Override
     public boolean applyGlobally() {
       return false;
     }
